force-app/main/default/objects/Contracts_and_Invoices__c/fields/Bill_To_Auxiliar__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Auxiliar__c</fullName>
    <label>Bill To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>