force-app/main/default/objects/Contracts_and_Invoices__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Contracts_and_Invoices__c/&apos;+Id+&apos;/view&apos;, Invoice_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice</label>
    <type>Text</type>
</CustomField>