force-app/main/default/objects/Contracts_and_Invoices__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Contracts and Invoices</relationshipLabel>
    <relationshipName>Contracts_and_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>