force-app/main/default/objects/Contracts_and_Invoices__c/fields/Ready_to_send__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_send__c</fullName>
    <description>LR 11/10/2023 Used to temporary hold te status value for selected invoices.</description>
    <label>Ready to send?</label>
    <length>120</length>
    <type>Text</type>
</CustomField>